tests/ui/missing_comma.stderr
error: expected `;` or `,
 --> tests/ui/missing_comma.rs:1:36
  |
1 | #[derive_where::derive_where(Clone Debug; T)]
  |                                    ^^^^^

error: expected `,`
 --> tests/ui/missing_comma.rs:4:39
  |
4 | #[derive_where::derive_where(Clone; A B)]
  |                                       ^
